src/deploy/kubernetes/split/base/controller/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: controller
  labels:
    app.kubernetes.io/name: controller
    app.kubernetes.io/component: controller
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: controller
      app.kubernetes.io/component: controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: controller
        app.kubernetes.io/component: controller
    spec:
      imagePullSecrets:
        - name: docker.first8.nl
      containers:
        - name: controller
          imagePullPolicy: Always
          image: docker.first8.nl/moj/moj-controller:17
          resources:
            limits:
              memory: "4Gi"
              cpu: "1000m"
            requests:
              memory: "2Gi"
              cpu: "500m"
          ports:
            - containerPort: 8080
# health checks
