src/deploy/kubernetes/split/base/controller/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: controller
spec:
  selector:
    app.kubernetes.io/name: controller
  ports:
    - port: 8080
      targetPort: 8080
